Patient table component using angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-patient></app-patient>
+
+  <app-patient></app-patient>
+  <patient-table><patient-table>
