Added routing and service components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-  <app-patient></app-patient>
-  <patient-table><patient-table>
+<nav>
+  <a routerLink="/patient-list">Dashboard</a>
+  <a routerLink="/create">Create</a>
+</nav>
+<router-outlet></router-outlet>
