--- a/src/app/patient-table/patient-table.component.html
+++ b/src/app/patient-table/patient-table.component.html
@@ -7,25 +7,25 @@
       <mat-cell *matCellDef="let row"><a routerLink="/patient/{{row.id}}">Edit</a></mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- First Name Column -->
     <ng-container matColumnDef="firstName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>First Name</mat-header-cell>
       <mat-cell *matCellDef="let row">{{row.firstName}}</mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Last Name Column -->
     <ng-container matColumnDef="lastName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</mat-header-cell>
       <mat-cell *matCellDef="let row">{{row.lastName}}</mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Contact Number Column -->
     <ng-container matColumnDef="contactNumber">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Contact Number</mat-header-cell>
       <mat-cell *matCellDef="let row">{{row.contactNumber}}</mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Status Column -->
     <ng-container matColumnDef="status">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
       <mat-cell *matCellDef="let row">{{row.active ? 'Active' : 'Inactive'}}</mat-cell>
@@ -36,7 +36,7 @@
   </mat-table>
 
   <mat-paginator #paginator
-    [length]="dataSource.data.length"
+    [length]="dataLength"
     [pageIndex]="0"
     [pageSize]="10"
     [pageSizeOptions]="[10, 20, 30, 50]">
