Patient Component and Routing

--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -1,4 +1,86 @@
-<p>
-  patient works!
-  {{patient}}
-</p>
+<div class="example-container">
+  <mat-form-field>
+    <input matInput placeholder="First Name" value="{{(patient) ? patient.firstName : ''}}">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Last Name" value="{{(patient) ? patient.lastName : ''}}">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Contact Number" value="{{(patient) ? patient.contactNumber : ''}}">
+  </mat-form-field>
+
+  <!-- This is for create-->
+  <div *ngIf="(patient == undefined); then createBlock else updateBlock"></div>
+  <ng-template #createBlock>
+    <div class="address-layout">
+      <mat-form-field>
+        <input matInput placeholder="Address 1" value="">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Address 2" value="">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="City" value="">
+      </mat-form-field>
+
+      <div *ngIf="countries != undefined">
+        <mat-form-field>
+          <mat-select placeholder="Country">
+            <mat-option *ngFor="let code of Object.keys(countries)" [value]="code">
+              {{ countries[code] }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <mat-form-field>
+        <input matInput placeholder="Postal Code" value="">
+      </mat-form-field>
+
+    </div>
+  </ng-template>
+
+  <!-- This is for update-->
+  <ng-template #updateBlock>
+    <div class="address-layout" #updateBlock *ngFor="let add of patient.addresses">
+      <mat-form-field>
+        <input matInput placeholder="Address 1" value="{{add.address1}}">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Address 2" value="{{add.address2}}">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="City" value="{{add.city}}">
+      </mat-form-field>
+
+      <!--<mat-form-field>
+        <mat-select placeholder="Country">
+          <mat-option *ngFor="let code of {}" [value]="code">
+            {{ countries[code] }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>-->
+
+      <mat-form-field>
+        <input matInput placeholder="Postal Code" value="{{add.postalCode}}">
+      </mat-form-field>
+
+    </div>
+  </ng-template>
+
+  <mat-checkbox>Active</mat-checkbox>
+
+  <br/><br/>
+
+  <div class="button-layout">
+    <button mat-button class="submit-button">Submit</button>
+    <button mat-button class="submit-button">Cancel</button>
+  </div>
+
+</div>
