--- a/src/app/patient-table/patient-table.component.html
+++ b/src/app/patient-table/patient-table.component.html
@@ -4,7 +4,7 @@
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-      <mat-cell *matCellDef="let row"><a routerLink="/patient/{{row.id}}">Edit</a></mat-cell>
+      <mat-cell *matCellDef="let row"><a class="table-button" routerLink="/patient/{{row.id}}">Edit</a></mat-cell>
     </ng-container>
 
     <!-- First Name Column -->
