--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
 
 body { margin: 0; }
+
+
+button {
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+}
+button:hover {
+  background-color: #cfd8dc;
+}
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+
+a.table-button {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-right: 10px;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #115EDB;
+  border-radius: 4px;
+}
+
+.table-button a:visited, a:link {
+  color: #115EDB;
+}
+
+.table-button a.active {
+  color: #FFFFFF;
+}
+
+/* Navigation link styles */
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-right: 10px;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #eee;
+  border-radius: 4px;
+}
+
+nav a:visited, a:link {
+  color: #607D8B;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #CFD8DC;
+}
+nav a.active {
+  color: #039be5;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
