--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,21 @@
-<nav>
-  <a routerLink="/patient-list">Dashboard</a>
-  <a routerLink="/create">Create</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="container">
+ <div class="login-container" id="login-page">
+      <div id="output"></div>
+      <div class="form-box">
+        <h3>Welcome to Patient Service App</h3>
+          <input name="user" type="text" placeholder="username" id="email">
+          <input type="password" placeholder="password" id="password">
+          <button class="btn btn-info btn-block login" onclick="login()">Login</button>
+      </div>
+  </div>
+
+  <div id="service-page">
+    <nav>
+      <a routerLink="/patient-list">Dashboard</a>
+      <a routerLink="/create">Create</a>
+      <a onclick="logout()">Logout</a>
+    </nav>
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
