Introduced Search control

--- a/src/app/patient-table/patient-table.component.html
+++ b/src/app/patient-table/patient-table.component.html
@@ -1,3 +1,7 @@
+<div class="search-section">
+  <input placeholder="Search" value="" id="search-query">&nbsp;<a class="table-button" (click)="search()">Search</a>
+  <div style="width: 50px">
+</div>
 <div class="mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort aria-label="Elements">
 
