--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -80,7 +80,7 @@
 
   <div class="button-layout">
     <button mat-button class="submit-button" (click)="save()">Submit</button>
-    <button mat-button class="submit-button">Cancel</button>
+    <button mat-button class="submit-button" (click)="cancel()">Cancel</button>
   </div>
 
 </div>
