--- a/src/app/patient-table/patient-table.component.html
+++ b/src/app/patient-table/patient-table.component.html
@@ -1,6 +1,11 @@
 <div class="search-section">
-  <input placeholder="Search" value="" id="search-query">&nbsp;<a class="table-button" (click)="search()">Search</a>
-  <div style="width: 50px">
+  <input *ngIf="isSearchFreeText" placeholder="Search Text" value="" id="search-query">
+  <input *ngIf="!isSearchFreeText" placeholder="Search Country" value="" id="search-country">&nbsp;
+  <a class="table-button" (click)="search()">Search</a>
+  <input type="radio" id="search-type-text" name="search-type" value="{{SEARCH_TEXT}}" checked (click)="changeSearchType()"/> Search Text
+  &nbsp;&nbsp;&nbsp;
+  <input type="radio" id="search-type-country" name="search-type" value="{{SEARCH_COUNTRY}}" (click)="changeSearchType()"/> Country
+
 </div>
 <div class="mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort aria-label="Elements">
